--- a/src/components/WeatherApp/Header/Header.css
+++ b/src/components/WeatherApp/Header/Header.css
@@ -19,3 +19,11 @@ span {
 .sunIcon {
   height: 70px;
 }
+
+@media screen and (max-width: 900px) {
+  .header {
+    height: auto;
+    margin: 0;
+    padding: 1rem;
+  }
+}
