--- a/src/components/WeatherApp/Footer/Footer.css
+++ b/src/components/WeatherApp/Footer/Footer.css
@@ -1,19 +1,19 @@
 .footer {
   font-size: 0.82em;
   font-weight: light;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   position: relative;
   bottom: 0;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: rgba(228, 228, 228, 0.3);
   backdrop-filter: blur(5px);
+  margin-top: auto;
 }
 
 .footerContainer {
-  height: 100%;
   padding: 1rem 0;
   display: flex;
   flex-direction: column;
@@ -31,4 +31,10 @@
 
 .logoDev {
   width: 30px;
+}
+
+@media screen and (max-width: 900px) {
+  .footer {
+    margin-top: 2rem;
+  }
 }
