Update Background & Icons Width

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -24,8 +24,7 @@
 
 .footerContainer p {
   margin-bottom: 0.5rem;
-  font-weight: bold;
-  color: #222222;
+  font-weight: bolder;
   font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
