--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -16,18 +16,27 @@
 .footerContainer {
   padding: 1rem 0;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
 
 .footerContainer p {
-  margin-bottom: 0.5rem;
-  font-weight: bolder;
+  margin: 0;
+  display: flex;
+  font-weight: 600;
   font-family: 'Plus Jakarta Sans', sans-serif;
+  font-size: .95em;
 }
 
 .logoDev {
-  width: 30px;
+  display: flex;
+  height: 24px;
+  width: 24px;
+  transition: all ease 200ms;
+  margin-left: .5rem;
+}
+
+.logoDev:hover {
+  transform: scale(1.05) rotate(7deg);
 }
